Bugfix#573: CSS profile layout Removed horizontal scrolling in profile page on smaller screens.

--- a/app/webFrontend/src/app/user/user-edit/user-edit.component.scss
+++ b/app/webFrontend/src/app/user/user-edit/user-edit.component.scss
@@ -1,9 +1,3 @@
-.edit-user-wrapper {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-}
-
 .user-form {
   width: 300px;
 
